feat(quality): inject Clock, fix Sonar CRITICALs, and reach 95% coverage
Squash merge feat/qualidade-criticos-sonar:

- Add TimeConfig Clock bean; inject into auth, JWT, and ADP import services
- Validate refresh token and API key expiry via injected Clock (QUAL-12)
- Fix 7 Sonar CRITICAL issues (S3776/S2004/S1192) and eliminate S8688
- Expand backend WebMvc and frontend Vitest coverage to ≥95% line/branch
- Add check-coverage-95 gate script and JaCoCo threshold updates

Co-authored-by: Cursor <cursoragent@cursor.com>